# foundation-model-grpc-server

./: .dockerignore  .gitignore  .pylintrc  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  package.xml  pyproject.toml  requirements.txt  requirements_ros.txt  setup.py
.github/workflows/: catkin_build.yml  docker_build.yml  docker_push.yml  pylint.yml  python_formatter.yml  python_linting.yml  python_package.yaml
launch/: camera.launch  demo.launch  rosbridge_server.launch
notebooks/: foundation_model_grpc_server_demo.ipynb
proto/: lavis-server.proto
scripts/: download_model_cache.py  rosbridge_server.py  run_lavis_client.py  run_lavis_server.py  sample_lavis_client.py  sample_lavis_server.py  sample_query_node.py  test_lavis_continuous.py  test_lavis_sample.py
src/: Makefile  lavis-server.proto  server.py  test.py
src/LAVIS_grpc_core/: __init__.py  server.py
src/LAVIS_grpc_interface/: lavis_server_pb2.py
src/LAVIS_grpc_server/: __init__.py  lavis_server_pb2.py  lavis_server_pb2.pyi  lavis_server_pb2_grpc.py  server.py  utils.py
src/LAVIS_grpc_utils/: __init__.py
src/foundation_model_grpc_core/: __init__.py  continuous_captioning.py  lavis_server.py  llama_adapter_server.py  server.py
src/foundation_model_grpc_utils/: __init__.py
srv/: ImageCaptioning.srv  VisualQuestionAnswering.srv
