<package format="2">
    <name>LAVIS_grpc_server</name>
    <version>0.0.1</version>
    <description>
        This package provides foo capability.
    </description>
    <maintainer email="sktometometo@gmail.com">Koki Shinjo</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>catkin_virtualenv</build_depend>

    <export>
        <pip_requirements>requirements.txt</pip_requirements>
    </export>
</package>
