<package format="2">
    <name>foundation_model_grpc_server</name>
    <version>0.1.0</version>
    <description>
        This is a package provides grpc server for foundation model.
        Currently LAVIS and LLaMA-Adapter are supported.
    </description>
    <author email="sktometometo@gmail.com">Koki Shinjo</author>
    <maintainer email="sktometometo@gmail.com">Koki Shinjo</maintainer>
    <license>MIT</license>
    <url>https://github.com/sktometometo/foundation-model-grpc-server</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>catkin_virtualenv</build_depend>

    <depend>rospy</depend>
    <depend>sensor_msgs</depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <export>
        <pip_requirements>requirements_ros.txt</pip_requirements>
    </export>
</package>
