[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LAVIS_grpc_server"
version = "0.0.1"
authors = [{ name = "Koki Shinjo", email = "sktometometo@gmail.com" }]
description = "GRPC server for LAVIS. https://github.com/salesforce/LAVIS"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
download_model_cache = "LAVIS_grpc_server:download_model_cache"
run_lavis_server = "LAVIS_grpc_server:main_server"
sample_lavis_client = "LAVIS_grpc_server:main_client_sample"

[project.urls]
"Homepage" = "https://github.com/sktometometo/LAVIS-grpc-server"
"Bug Tracker" = "https://github.com/sktometometo/LAVIS-grpc-server/issues"
